# electricity-theft-detection

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.api  Dockerfile.training
scripts/: monitor_drift.py  train_models.py
src/api/: main.py
src/pipeline/: data_pipeline.py
src/ui/: app.py
src/workers/: tasks.py
tests/integration/: test_pipeline.py
