[tool.poetry]
name = "electricity-theft-detection"
version = "1.0.0"
description = "Hybrid SLM + Time-Series Anomaly Detection for Smart Grids"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# Core ML/Data
pandas = "^2.1.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
tsfresh = "^0.20.0"
shap = ">=0.45.0"
scipy = ">=1.9.0,<1.12.0"
huggingface-hub = "^0.20.0"
celery = "^5.3.0"
setuptools = "^69.0.0"
imbalanced-learn = "^0.11.0"

# LLM/Inference
llama-cpp-python = "^0.2.0"
# Optional: vllm for GPU serving
# vllm = "^0.2.0"  # Install separately for CUDA support

# API
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"

# Monitoring/Drift
evidently = "^0.4.0"  # Optional drift detection UI

# Utilities
pyyaml = "^6.0.1"
joblib = "^1.3.0"
python-dotenv = "^1.0.0"
structlog = "^23.2.0"
redis = "^7.3.0"
streamlit = "^1.55.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
types-requests = "^2.31.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"  # For FastAPI TestClient

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100